<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vinkrish.fling.FlingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/oddLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/is_it_odd"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/lightBlack" />

                    <ImageView
                        android:id="@+id/odd_tick"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:src="@drawable/tick"
                        android:visibility="invisible" />

                    <ImageView
                        android:id="@+id/odd_wrong"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:src="@drawable/wrong"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/odd_plus_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:paddingBottom="20dp"
                        android:text="+1"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:visibility="invisible"/>

                </FrameLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <FrameLayout
                    android:id="@+id/evenLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/is_it_even"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/lightBlack" />

                    <ImageView
                        android:id="@+id/even_tick"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:src="@drawable/tick"
                        android:visibility="invisible" />

                    <ImageView
                        android:id="@+id/even_wrong"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:src="@drawable/wrong"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/even_plus_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:paddingBottom="20dp"
                        android:text="+1"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:visibility="invisible"/>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_count"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lightBlack" />

            <TextView
                android:id="@+id/your_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/score"
                android:layout_toRightOf="@+id/score"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/lightBlack" />

            <TextView
                android:id="@+id/wrong_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/score"
                android:paddingTop="5dp"
                android:text="@string/wrong_count"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lightBlack" />

            <TextView
                android:id="@+id/your_wrong_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/wrong_score"
                android:layout_toEndOf="@+id/wrong_score"
                android:layout_toRightOf="@+id/wrong_score"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/lightBlack" />

            <FrameLayout
                android:id="@+id/podium"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/info"
                    android:textColor="#fff" />

            </FrameLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
